--- a/performanceTeamRegister.html
+++ b/performanceTeamRegister.html
@@ -18,7 +18,7 @@
         <div class="CCC-nav">
             <a id="CCC-link" class="CCC-nav-tag" href="#">首页</a>
             <a id="CCC-link" class="CCC-nav-tag" href="#">大组</a>
-            <a id="CCC-link" class="CCC-nav-tag" href="#">活动</a>
+            <a id="CCC-link" class="CCC-nav-tag" href="#">活动</a>bao
             <a id="CCC-link" class="CCC-nav-tag" href="#">任务</a>
             <a id="CCC-link" class="CCC-nav-tag" href="#">漫客</a>
             <a id="CCC-link" class="CCC-nav-tag" href="#">影业</a>
