--- a/displayZ.html
+++ b/displayZ.html
@@ -69,15 +69,17 @@
                 </div>
             </div>
             <div class="CCC-production-content-works">
-                <embed height="460" width="780" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="http://static.hdslb.com/miniloader.swf" flashvars="aid=1108315&page=1" pluginspage="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash">
-                <p class="CCC-production-content-works-partnerListTitle">作品参与</p>
-                <p>职介 用户名</p>
-                <p>职介 用户名</p>
-                <p>职介 用户名</p>
-                <p>职介 用户名</p>
-                <p>职介 用户名</p>
-                <img src="skins/pic/sample pic.png"/>
-                <p>德玛西亚！！！</p>
+                <div id="CCC-production-content-works-Content">
+                    <embed height="460" width="780" quality="high" allowfullscreen="true" type="application/x-shockwave-flash" src="http://static.hdslb.com/miniloader.swf" flashvars="aid=1108315&page=1" pluginspage="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash">
+                    <p class="CCC-production-content-works-partnerListTitle">作品参与</p>
+                    <p>职介 用户名</p>
+                    <p>职介 用户名</p>
+                    <p>职介 用户名</p>
+                    <p>职介 用户名</p>
+                    <p>职介 用户名</p>
+                    <img src="skins/pic/sample pic.png" />
+                    <p>德玛西亚！！！</p>
+                </div>
                 <div class="CCC-production-content-works-bottomLink">
                     <div id="CCC-coinFeeder">
                         <img src="skins/pic/coin s.png" width="42" height="42" />
@@ -263,5 +265,6 @@
         </div>
     </div>
     <!--页脚-->
+    <!--<script type="text/javascript" src="/skins/js/displayZ.js"></script>--> <!--注释这个script的原因是想看demo，233-->
 </body>
 </html>
